--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,7 +141,7 @@
                             <div class="location-wrap mx-auto py-3 py-lg-0">
                                 <h5 class="text-white">
                                     <i class="custom-icon bi-geo-alt me-2"></i>
-                                    The Nest Innovation Hub, Yaba, Lagos
+                                    Event center, Lagos
                                 </h5>
                             </div>
 
@@ -599,7 +599,7 @@
                     <div class="col-lg-3 col-md-6 col-11 mb-4 mb-lg-0 mb-md-0">
                         <h5 class="site-footer-title mb-3">Location</h5>
 
-                        <p class="text-white d-flex mt-3 mb-2">The Nest Innovation Hub, Yaba, Lagos, Nigeria</p>
+                        <p class="text-white d-flex mt-3 mb-2">Lagos, Nigeria</p>
 
                         <a class="link-fx-1 color-contrast-higher mt-3" href="#nav-ContactMap-tab">
                             <span>Our Maps</span>
