--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Game On - by Speen studios</title>
+        <title>Game On - by Clusterlabs</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        Speen
+                        Clusterlabs
                     </a>
 
                     <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
@@ -96,7 +96,7 @@
                     <div class="row">
 
                         <div class="col-12 mt-auto mb-5 text-center">
-                            <!-- <small>Speen Studios Presents</small> -->
+                            <!-- <small>Clusterlabs Presents</small> -->
 
                             <h1 class="text-white mb-5">Game <i class="bi-toggle-on"></i>N 2023</h1>
 
@@ -134,7 +134,7 @@
                             <div class="date-wrap">
                                 <h5 class="text-white">
                                     <i class="custom-icon bi-clock me-2"></i>
-                                    15<sup>th</sup>, Sept 2023
+                                    5<sup>th</sup>, Aug 2023
                                 </h5>
                             </div>
 
@@ -175,7 +175,7 @@
                 <div class="video-wrap">
                     <video autoplay="" loop="" muted="" class="custom-video" poster="">
                         <!-- <source src="static/video/pexels-2022395.mp4" type="video/mp4"> -->
-            <source src="static/video/pexels-7914850.mp4" type="video/mp4">
+            <source src="https://vod-progressive.akamaized.net/exp=1685549761~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F3279%2F13%2F341398234%2F1362775007.mp4~hmac=9597fd590f4200f934092e33f961ab50123585932dbdaab624c5c054e2425979/vimeo-prod-skyfire-std-us/01/3279/13/341398234/1362775007.mp4" type="video/mp4">
 
                         Your browser does not support the video tag.
                     </video>
@@ -614,7 +614,7 @@
                     <div class="row">
 
                         <div class="col-lg-3 col-12 mt-5">
-                            <p class="copyright-text">Copyright © 2023. Speen Studios</p>
+                            <p class="copyright-text">Copyright © 2023. Clusterlabs</p>
                         </div>
 
                         <div class="col-lg-8 col-12 mt-lg-5">
